2007-03-09  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man4/sua-as.4.man: added for release checks
	* doc/man/man4/tua-as.4.man: added for release checks

	* src/util/init/sigtran: update module list
	* src/util/init/sigtran.sh: update module list
	* src/util/sysconfig/sigtran.in: update module list

	* doc/manual/bugs.texi: documented initial timeout bug
	* src/modules/m2pa_sl.c: fixed initial timeout bug

2007-03-08  Brian Bidulock  <bidulock@openss7.org>

	* src/util/init/sigtran.sh: ubuntu looks for lsb info in init scripts

2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/sigtran.refs: remove duplicate reference
	* src/test/test-m2pa.c: print primitives at default verbosity
	* src/test/test-m2ua_as.c: print primitives at default verbosity
	* src/test/test-sigtran.c: print primitives at default verbosity
	* Makefile.am (modutil_DATA): should not be distributed
	* tests/atlocal.in: tool substitutions changed

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: correct version numbers
	* sigtran.spec.in: do not build source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* sigtran.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: improvements to common build environment
	* doc/manual/news.texi: updates for release

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: updates and corrections
	* doc/manual/prerequisites.texi: updates and corrections
	* doc/manual/releases.texi: updates and corrections